fix layout issue on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@
 body {
   background-image: url('min.jpg');
   background-size: cover;
+  background-repeat: repeat-y;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 body,
 input,
@@ -21,19 +27,25 @@ button {
 }
 
 .App {
-  position: absolute;
   padding: 10px 16px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 600px;
-
+  min-width: 500px;
   background: rgba(168, 168, 168, 0.123);
   box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.37);
   backdrop-filter: blur(10.5px);
   -webkit-backdrop-filter: blur(13.5px);
   border-radius: 7px;
   border: 1px solid rgba(0, 0, 0, 0.068);
+}
+
+@media screen and (max-width: 425px) {
+  .App {
+    min-width: unset;
+  }
+}
+@media screen and (max-width: 375px) {
+  .listEntry-container {
+    flex-direction: column;
+  }
 }
 h2 {
   font-weight: 500;
